<resources>
    <string name="app_name">Rumah Gas U-33</string>
    <string name="gass">Rumah Gas </string>
    <string name="in">U-33</string>
    <string name="logo_app">Logo App</string>
    <string name="title_activity_manager_main">ManagerMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_employee_main">EmployeeMainActivity</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="desc_signin_page">Masuk ke akun anda untuk melanjutkan</string>
    <string name="email_error">Masukkan email yang sesuai</string>
    <string name="password_less_characters">Kata sandi tidak boleh kurang dari 8 karakter</string>
    <string name="enter_email">Masukkan email</string>
    <string name="enter_password">Masukkan password</string>
    <string name="btn_login">Masuk</string>
    <string name="please_fill_in_all_input">Lengkapi terlebih dahulu semua data</string>
    <string name="login_error">Gagal Login</string>
    <string name="login_success">Berhasil Login</string>
    <string name="order">Pesanan</string>
    <string name="stock">Stok</string>
    <string name="cost">Biaya</string>
    <string name="more">Lainnya</string>
    <string name="pesanan">Pesanan</string>
    <string name="hai_manager">Hai, Manager</string>
    <string name="bos_gassin">BOS GASSIN</string>
    <string name="pendapatan_hari_ini">Pendapatan Hari Ini</string>
    <string name="lainnya">Lainnya</string>
    <string name="cari_pesanan_pelanggan">Cari pesanan pelanggan</string>
    <string name="cari_agen">Cari Agen</string>
    <string name="lihat_detail">Lihat detail</string>
    <string name="agen">Agen</string>
    <string name="tambah_agen">Tambah Agen</string>
    <string name="masukkan_nama_agen">Masukkan nama agen</string>
    <string name="masukkan_link_google_map_alamat_agen">Masukkan link google map alamat agen</string>
    <string name="masukkan_patokan_alamat_agen">Masukkan patokan alamat agen</string>
    <string name="masukkan_nomer_telepon_agen">Masukkan nomer telepon agen</string>
    <string name="masukkan_harga_gas_agenl">Masukkan harga gas agen</string>
    <string name="tambahkan_agen">Tambahkan Agen</string>
    <string name="edit_agen">Edit Agen</string>
    <string name="simpan">Simpan</string>
    <string name="detail_agen">Detail Agen</string>
    <string name="nama_agen">Nama Agen</string>
    <string name="harga_agen">Harga Agen</string>
    <string name="nomer_telepon_agen">Nomer Telepon Agen</string>
    <string name="alamat_agen">Alamat Agen</string>
    <string name="link_map_agen">Link Map Agen</string>
    <string name="agen_berhasil_dihapus">Agen berhasil dihapus</string>
    <string name="agen_berhasil_diupdate">Agen berhasil diupdate</string>
    <string name="cari_pelanggan">Cari Pelanggan</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="tambah_pelanggan">Tambah Pelanggan</string>
    <string name="masukkan_nama_pelanggan">Masukkan nama pelanggan</string>
    <string name="masukkan_link_google_map_alamat_pelanggan">Masukkan link google map alamat pelanggan</string>
    <string name="masukkan_patokan_alamat_pelanggan">Masukkan patokan alamat pelanggan</string>
    <string name="masukkan_nomer_telepon_pelanggan">Masukkan nomer telepon pelanggan</string>
    <string name="masukkan_harga_gas_pelangganl">Masukkan harga gas pelanggan</string>
    <string name="tambahkan_pelanggan">Tambahkan Pelanggan</string>
    <string name="edit_pelanggan">Edit Pelanggan</string>
    <string name="detail_pelanggan">Detail Pelanggan</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="harga_pelanggan">Harga Pelanggan</string>
    <string name="nomer_telepon_pelanggan">Nomer Telepon Pelanggan</string>
    <string name="alamat_pelanggan">Alamat Pelanggan</string>
    <string name="link_map_pelanggan">Link Map Pelanggan</string>
    <string name="pelanggan_berhasil_dihapus">Pelanggan berhasil dihapus</string>
    <string name="pelanggan_berhasil_diupdate">Pelanggan berhasil diupdate</string>
    <string name="masukkan_nama_karyawan">Masukkan nama karyawan</string>
    <string name="masukkan_email_karyawan">Masukkan email karyawan</string>
    <string name="masukkan_nomor_telepon_karyawan">Masukkan nomor telepon karyawan</string>
    <string name="konfirmasi_password_karyawan">Konfirmasi password karyawan</string>
    <string name="masukkan_password_karyawan">Masukkan password karyawan</string>
    <string name="tambahkan_karyawan">Tambahkan Karyawan</string>
    <string name="konfirmasi_kata_sandi_tidak_sama_dengan_password">Konfirmasi kata sandi tidak sama dengan password</string>
    <string name="masukkan_username_karyawan">Masukkan username karyawan</string>
    <string name="edit_karyawan">Edit Karyawan</string>
    <string name="ganti_password">Ganti password</string>
    <string name="format_email_tidak_valid">Format email tidak valid</string>
    <string name="hapus_karyawan">Hapus Karyawan</string>
    <string name="karyawan">Karyawan</string>
    <string name="cari_karyawan">Cari Karyawan</string>
    <string name="tambah_karyawan">Tambah Karyawan</string>
    <string name="detail_karyawan">Detail Karyawan</string>
    <string name="hai_karyawan">Hai, Karyawan</string>
    <string name="transaksi_aktif">Transaksi Aktif</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="tambah_pesanan">Tambah Pesanan</string>
    <string name="pilih_pelanggan">Pilih pelanggan</string>
    <string name="ganti">Ganti</string>
    <string name="jumlah_tabung_gas">Jumlah Tabung Gas</string>
    <string name="masukkan_jumlah_tabung_gas_yang_dipesan_pelanggan">Masukkan jumlah tabung gas yang dipesan pelanggan</string>
    <string name="ringkasan_pembayaran">Ringkasan pembayaran</string>
    <string name="harga">Harga Satuan</string>
    <string name="total_pembayaran">Total pembayaran</string>
    <string name="pilih_karyawan">Pilih karyawan</string>
    <string name="pelanggan_belum_dipilih">Belum dipilih</string>
    <string name="pilih_pelanggan_terlebih_dahulu">Pilih pelanggan terlebih dahulu</string>
    <string name="karyawan_belum_dipilih">Belum dipilih</string>
    <string name="pilih_karyawan_terlebih_dahulu">Pilih karyawan terlebih dahulu</string>
    <string name="transaksi_antar_gas_berhasil_dibuat">Transaksi antar gas berhasil dibuat</string>
    <string name="pilih_toko">Pilih toko</string>
    <string name="pilih_agen">Pilih agen</string>
    <string name="berhasil_memilih_customer">Berhasil memilih customer</string>
    <string name="berhasil_memilih_employee">Berhasil memilih karyawan</string>
    <string name="berhasil_memilih_store">Berhasil memilih agen</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="status_pesanan">Status Pesanan</string>
    <string name="ubah_pesanan">Ubah Pesanan</string>
    <string name="batalkan_pesanan">Batalkan Pesanan</string>
    <string name="konfirmasi_pembelian">Konfirmasi Pembelian</string>
    <string name="agen_belum_dipilih">Agen belum dipilih</string>
    <string name="pilih_agen_terlebih_dahulu">Pilih agen terlebih dahulu</string>
    <string name="tambah_pembelian">Tambah Pembelian</string>
    <string name="detail_pembelian">Detail Pembelian</string>
    <string name="ubah_pembelian">Ubah Pembelian</string>
    <string name="batalkan_pembelian">Batalkan Pembelian</string>
    <string name="status_pembelian">Status Pembelian</string>
    <string name="cari_pembelian_agen">Cari Pembelian</string>
    <string name="masukkan_jumlah_tabung_gas_yang_ingin_dibeli">Masukkan jumlah tabung gas yang ingin dibeli</string>
    <string name="berangkat">Berangkat</string>
    <string name="terkendala">Terkendala</string>
    <string name="berangkat_k">Berangkat</string>
    <string name="sudah_diantar">Sudah diantar</string>
    <string name="sudah_dibeli">Sudah dibeli</string>
    <string name="ajukan_biaya_operasional">Ajukan Biaya Operasional</string>
    <string name="cari_transaksi">Cari Transaksi</string>
    <string name="gagal_mengambil_token_firebase_cloud_messaging">Gagal mengambil token firebase cloud messaging</string>
    <string name="biaya_operasional">Biaya Operasional</string>
    <string name="apakah_anda_ingin_mengajukan_biaya_operasional_tambahan">Apakah anda ingin mengajukan biaya operasional tambahan?</string>
    <string name="jika_mengajukan_tekan_tombol_ajukan">Jika mengajukan tekan tombol ajukan</string>
    <string name="ajukan">Ajukan</string>
    <string name="tidak">Tidak</string>
    <string name="masukkan_deskripsi_pengeluaran">Masukkan deskripsi pengeluaran</string>
    <string name="masukkan_biaya">Masukkan biaya</string>
    <string name="masukkan_deskripsi_pengeluaran_dan_biayanya">Masukkan deskripsi pengeluaran dan biayanya</string>
    <string name="setelah_disimpan_maka_manager_akan_mengonfirmasi">Setelah disimpan maka manager akan mengonfirmasi</string>
    <string name="lengkapi_data_yang_belum_terisi">Lengkapi data yang belum terisi</string>
    <string name="batal">Batal</string>
    <string name="lihat_status_pengajuan_biaya_operasional">Lihat Status Pengajuan Biaya Operasional</string>
    <string name="tutup">Tutup</string>
    <string name="berikut_detail_informasi_pengajuan_biaya_operasional">Berikut detail informasi pengajuan biaya operasional</string>
    <string name="deskripsi_biaya_operasional">Deskripsi Biaya Operasional</string>
    <string name="status_pengajuan">Status Pengajuan</string>
    <string name="pengajuan_ditolak">Pengajuan Ditolak</string>
    <string name="pengajuan_diterima">Pengajuan Diterima</string>
    <string name="proses_pengajuan">Proses Pengajuan</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="telepon">Telepon</string>
    <string name="maps">Maps</string>
    <string name="batalkan_pengantaran">Batalkan Pengantaran</string>
    <string name="masukkan_kendala_khusus">Masukkan kendala khusus</string>
    <string name="tambah_operasional">Tambah Operasional</string>
    <string name="detail_biaya_operasional">Detail Biaya Operasional</string>
    <string name="ringkasan_biaya">Ringkasan biaya</string>
    <string name="keterangan_pengeluaran">Keterangan pengeluaran</string>
    <string name="simpan_pesanan">Simpan Pesanan</string>
    <string name="simpan_pembelian">Simpan Pembelian</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="profil">Profil</string>
    <string name="user_berhasil_di_update">User Berhasil Di Update</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_nomor_telepon">Masukkan Nomor Telepon</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="stok_tidak_cukup">Stok Tidak Cukup</string>
    <string name="stok_saat_ini_apakah_anda_ingin_menggunakan_stok_yang_tersedia">Stok saat ini: %1$s. Apakah Anda ingin menggunakan stok yang tersedia?</string>
    <string name="gunakan_stok">Gunakan Stok</string>
    <string name="resupply">Resupply</string>
    <string name="stok_habis">Stok Habis</string>
    <string name="stok_saat_ini_kosong_anda_perlu_melakukan_resupply">Stok saat ini kosong. Anda perlu melakukan resupply.</string>
</resources>