<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/biaya_operasional"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/apakah_anda_ingin_mengajukan_biaya_operasional_tambahan"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/jika_mengajukan_tekan_tombol_ajukan"
                android:textSize="10sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi_bold"
                android:paddingVertical="10dp"
                android:text="@string/ajukan"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:layout_width="12dp"
                android:layout_height="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_semi_bold"
                android:paddingVertical="10dp"
                android:text="@string/tidak"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp"
                app:backgroundTint="@color/white"
                app:strokeColor="@android:color/holo_red_light"
                app:strokeWidth="2dp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>