<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/biaya_operasional"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/masukkan_deskripsi_pengeluaran_dan_biayanya"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/setelah_disimpan_maka_manager_akan_mengonfirmasi"
                android:textSize="10sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_cost_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:startIconTint="@color/darkGreen"
                app:startIconDrawable="@drawable/ic_note_24dp"
                app:startIconContentDescription="@string/masukkan_deskripsi_pengeluaran"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp">
            <com.naffeid.gassin.ui.components.EditText
                android:id="@+id/ed_cost_description"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:hint="@string/masukkan_deskripsi_pengeluaran"
                android:inputType="text"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_cost_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="6dp"
                app:startIconTint="@color/darkGreen"
                app:startIconDrawable="@drawable/ic_moneys_24dp"
                app:startIconContentDescription="@string/masukkan_biaya"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp">
                <com.naffeid.gassin.ui.components.EditText
                    android:id="@+id/ed_cost_price"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:hint="@string/masukkan_biaya"
                    android:textSize="14sp"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/poppins_regular"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_semi_bold"
                android:paddingVertical="10dp"
                android:text="@string/batal"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp"
                app:backgroundTint="@color/white"
                app:strokeColor="@android:color/holo_red_light"
                app:strokeWidth="2dp" />
            <View
                android:layout_width="12dp"
                android:layout_height="12dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi_bold"
                android:paddingVertical="10dp"
                android:text="@string/ajukan"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
